istio/deploy-istio-example.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"name":"httpbin","namespace":"default"},"spec":{"replicas":1,"template":{"metadata":{"labels":{"app":"httpbin","version":"v1"}},"spec":{"containers":[{"image":"docker.io/kennethreitz/httpbin","imagePullPolicy":"IfNotPresent","name":"httpbin","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: 2019-02-07T19:20:37Z
  generation: 1
  labels:
    app: httpbin
    version: v1
  name: httpbin
  namespace: default
  resourceVersion: "2852231"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/httpbin
  uid: 7330b105-2b0d-11e9-b70a-42010a8002be
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: httpbin
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2019-02-07T19:20:37Z
    lastUpdateTime: 2019-02-07T19:20:37Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2019-02-07T19:20:37Z
    lastUpdateTime: 2019-02-07T19:21:00Z
    message: ReplicaSet "httpbin-656bd7df7c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
