istio/Gateway-istio-example.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"Gateway","metadata":{"annotations":{},"name":"httpbin-gateway","namespace":"default"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["httpbin.example.com"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
  clusterName: ""
  creationTimestamp: 2019-02-07T19:58:48Z
  generation: 1
  name: httpbin-gateway
  namespace: default
  resourceVersion: "2855656"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/default/gateways/httpbin-gateway
  uid: c87cfc78-2b12-11e9-b70a-42010a8002be
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - httpbin.example.com
    port:
      name: http
      number: 80
      protocol: HTTP
