istio/gc-example-a-base.yml
apiVersion: v1
kind: Service
metadata:
  name: gc-example-a
  namespace: grupo-conocimiento
  labels:
    app: gc-example-a
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: gc-example-a
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gc-example-a
  namespace: grupo-conocimiento
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gc-example-a
        version: v1
    spec:
      containers:
      - image: gcr.io/gke-inigo-1-229519/gc-example-a:1.0.0
        imagePullPolicy: IfNotPresent
        name: gc-example-a
        ports:
        - containerPort: 8080
