istio/VirtualService-base.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gc-example-a
  namespace: grupo-conocimiento
spec:
  hosts:
  - "gc-example-a.grupo-conocimiento.svc.cluster.local"
  gateways:
  - gc-example-a-gateway
  http:
  - match:
    - uri:
        prefix: /colors
    route:
    - destination:
        port:
          number: 8000
        host: gc-example-a
