istio/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  clusterName: ""
  creationTimestamp: 2019-02-06T23:41:28Z
  generation: 1
  name: gc-example-a
  namespace: grupo-conocimiento
  resourceVersion: "2855356"
  selfLink: /apis/networking.istio.io/v1alpha3/namespaces/grupo-conocimiento/virtualservices/gc-example-a
  uid: b962694e-2a68-11e9-b70a-42010a8002be
spec:
  gateways:
  - gc-example-a
  hosts:
  - gc-example-a.grupo-conocimiento.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /colors
    route:
    - destination:
        host: gc-example-a
        port:
          number: 8080
